--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "dependencies": {
     "axios": "0.19.2",
     "d3": "3.5.17",
-    "jquery": "3.4.1",
     "lodash": "4.17.15",
     "react": "16.12.0",
     "react-dom": "16.12.0",
@@ -23,5 +22,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
