--- a/package.json
+++ b/package.json
@@ -11,17 +11,22 @@
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-global-hook": "1.3.3",
-    "react-scripts": "3.0.1"
+    "react-scripts": "^3.4.1"
   },
   "devDependencies": {
+    "pre-commit": "^1.2.2",
     "typescript": "3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src/**/*.js --fix"
   },
+  "pre-commit": [
+    "lint"
+  ],
   "browserslist": [
     ">0.2%",
     "not dead",
